# SlicerFinslerTractography

./: CMakeLists.txt  CMakeLists.txt~
FinslerBacktracing/: CMakeLists.txt  FinslerBacktracing.cxx  FinslerBacktracing.xml
FinslerBacktracing/.svn/: entries
FinslerBacktracing/.svn/text-base/: CMakeLists.txt.svn-base  itkVTKRungeKuttaFinslerIntegration.txx.svn-base
FinslerBacktracing/Testing/: CMakeLists - Copy.txt  CMakeLists.txt  CMakeLists.txt~  FinslerBacktracingTest.cxx  FinslerBacktracing_Compare.cxx
FinslerBacktracing/Testing/TestData/: sampleDirections.nrrd
FinslerBacktracing/Testing/TestData/.svn/: entries
FinslerTractography/: CMakeLists.txt  FinslerTractography.cxx  FinslerTractography.xml  itkIndexToDirectionImageFilter.h  itkIndexToDirectionImageFilter.txx  itkParallelFastSweeping.h  itkParallelFastSweeping.txx  itkParallelFastSweepingStep.h  itkParallelFastSweepingStep.txx
FinslerTractography/HARDI-ITK/: itkComputeSHCoefficientsFilter.h  itkComputeSHCoefficientsFilter.txx
FinslerTractography/HARDI-ITK/.svn/: entries
FinslerTractography/HARDI-ITK/.svn/text-base/: itkComputeLocalCostFromSH.h.svn-base  itkComputeLocalCostFromSH.txx.svn-base
FinslerTractography/Testing/: CMakeLists - Copy.txt  CMakeLists.txt  CMakeLists.txt~  FinslerTractographyTest.cxx  FinslerTractography_Compare.cxx
